hphp/test/zend/bad/ext-pdo_sqlite/bug44327_3.php
<?php

$db = new pdo('sqlite::memory:');

$x = $db->query('select 1 as queryStringxx');
$y = $x->fetch(PDO::FETCH_LAZY);
var_dump($y, $y->queryString, $y->queryStringzz, $y->queryStringxx);

print "---\n";

var_dump($y[5], $y->{3});

?>